--- a/src_api/MicroLogger.API.SerilogToRabbitMQ.Standard/MicroLogger.API.SerilogToRabbitMQ.Standard.csproj
+++ b/src_api/MicroLogger.API.SerilogToRabbitMQ.Standard/MicroLogger.API.SerilogToRabbitMQ.Standard.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Description>MicroLogger is an API for an OpenSource Project that we call it NewsRoom</Description>
     <Authors>Mahmoud Savarian</Authors>
     <Company>Mahmoud Savarian</Company>
     <Copyright>Nikamooz NewsRoom</Copyright>
-    <Version>1.0.5</Version>
+    <Version>1.0.6</Version>
     <PackageProjectUrl>https://github.com/sav68/micro-logger-service</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/sav68/micro-logger-service/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/sav68/micro-logger-service</RepositoryUrl>
