--- a/src_sample/SampleApp/SampleApp.csproj
+++ b/src_sample/SampleApp/SampleApp.csproj
@@ -13,7 +13,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src_api\MicroLogger.API_Serilog.Standard\MicroLogger.API_Serilog.Standard.csproj" />
+    <ProjectReference Include="..\..\src_api\MicroLogger.API_Serilog.Standard\MicroLogger.API.SerilogToRabbitMQ.Standard.csproj" />
   </ItemGroup>
 
 </Project>
